# abevy

./: .gitignore  2run.ps1  Cargo.toml  b2run.sh  bash.sh  bcleaner.sh  bonerun.sh  cleaner.ps1  onerun.ps1  onerun_err.txt  onerun_out.txt
.cargo/: cargo.toml  config.toml
aother/: star.rs
aother/bevy_ecs_tilemap/examples/: chunking.rs  random_map.rs  texture_container.rs
aother/bevy_ui_text_input/: CHANGELOG.md  Cargo.toml  README.md
aother/bevy_ui_text_input/examples/: decimal.rs  minimal.rs  single_line.rs  text_input.rs
aother/bevy_ui_text_input/src/: actions.rs  clipboard.rs  lib.rs  render.rs  text_input_pipeline.rs
aother/star/: star_components.rs  star_events.rs
aother/tmap/: Cargo.toml  README.md
aother/tmap/examples/: chunking.rs  layers.rs  textured_tile_shader.rs
aother/tmap/src/: lib.rs
aother/ui_text_input/examples/: bench.rs  immediate.rs  multiple_inputs.rs  numeric_input.rs
aother/ui_text_input/src/: edit.rs
assets/: .renamer.sh  apocalypse.jpg.import  daynightcycle-gradient-texture.tres  dinosaurman.wav.import  remcopy.ps1
assets/fonts/: Exocet2.ttf.import
assets/fonts/name_label/: Perfect DOS VGA 437.ttf.import  PixAntiqua.ttf.import  font1f.png.import
assets/race/: human.race.ron
assets/race/controllable/: human.race.ron
assets/races/: human.race.ron
assets/ron/: sufi.ps1
assets/ron/color_sampler/: nase.wcolors.ron
assets/ron/dimension/: cave.dimension.ron  overworld.dimension.ron
assets/shader/: textured_tile.wgsl  textured_tile_dual.wgsl  voronoi.wgsl
assets/shaders/: textured_tile.wgsl
assets/sound/: howlingwolf.ogg.import  nature-soundscape.ogg.import
assets/sound/taunts/: arabnokia.wav.import  arabsong.wav.import  autotunecry.wav.import  (+51 more)
assets/spritedata/: human_head0.spritedata.ron
assets/texture/: texturasAOgodot (libre uso).lnk
assets/textures/: new_noise_texture_2d.tres
crates/acommon/: Cargo.toml
crates/acommon/src/: common.rs  common_components.rs  common_id_components.rs  common_resources.rs  common_states.rs  common_systems.rs  common_types.rs  components.rs  lib.rs  resources.rs  states.rs  systems.rs  types.rs
crates/agame_common/: Cargo.toml
crates/agame_common/src/: color_sampler_resources.rs  color_sampler_systems.rs  game_common.rs  game_common_components.rs  game_common_components_samplers.rs  game_common_states.rs  game_common_systems.rs  lib.rs
crates/agame_common/src/time/: time_components.rs
crates/app/: Cargo.toml
crates/asset_loading/: Cargo.toml
crates/asset_loading/src/: asset_loading.rs  asset_loading_systems.rs  lib.rs
crates/being/: Cargo.toml
crates/being_shared/: Cargo.toml
crates/camera/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs  client_functions.rs  client_resources.rs  client_systems.rs  lib.rs
crates/dimension/: Cargo.toml
crates/dimension_shared/: Cargo.toml
crates/faction/: Cargo.toml
crates/fnl/: Cargo.toml
crates/game/: Cargo.toml
crates/host/: Cargo.toml
crates/host/src/: host.rs  host_functions.rs  host_systems.rs  lib.rs
crates/modifier/: Cargo.toml
crates/modifier/src/: lib.rs  modifier.rs  modifier_components.rs  modifier_move_components.rs  modifier_systems.rs
crates/movement/: Cargo.toml
crates/movement/src/: lib.rs  movement.rs  movement_components.rs  movement_events.rs  movement_systems.rs
crates/multiplayer_shared/: Cargo.toml
crates/multiplayer_shared/src/: lib.rs  multiplayer_events.rs  multiplayer_resources.rs  multiplayer_shared.rs  multiplayer_shared_systems.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs  player.rs  player_components.rs  player_resources.rs
crates/pregame_screen/: Cargo.toml
crates/setup_screen/: Cargo.toml
crates/setup_screen/src/: character_creation.rs  lib.rs  lobby.rs  setup_screen.rs
crates/setup_screen/src/character_creation/: character_creation_layout.rs
crates/setup_screen/src/lobby/: lobby_components.rs  lobby_layout.rs  lobby_systems.rs
crates/sprite/: Cargo.toml
crates/sprite/src/: lib.rs  sprite.rs  sprite_components.rs  sprite_init_systems.rs  sprite_resources.rs  sprite_scale_offset_components.rs  sprite_systems.rs
crates/sprite_animation/: Cargo.toml
crates/sprite_animation_shared/: Cargo.toml
crates/sprite_shared/: Cargo.toml
crates/sprite_shared/src/: animation_shared.rs  lib.rs  sprite_shared.rs
crates/tilemap/: Cargo.toml
crates/tilemap/src/: chunking_components.rs  chunking_resources.rs  chunking_systems.rs  lib.rs  terrain_gen.rs  tile.rs  tile_components.rs  tilemap.rs  tilemap_components.rs  tilemap_systems.rs
crates/tilemap/src/terrain_gen/: terrgen_components.rs  terrgen_events.rs  terrgen_init_systems.rs  terrgen_noise_init_systems.rs  terrgen_oplist_components.rs  terrgen_oplist_init_systems.rs  terrgen_resources.rs  terrgen_systems.rs  terrgen_utils.rs
crates/tilemap/src/terrain_gen/biomes/: planes.txt
crates/tilemap/src/tile/: tile_components.rs  tile_events.rs  tile_init_systems.rs  tile_materials.rs  tile_resources.rs  tile_sampler_init_systems.rs  tile_sampler_resources.rs  tile_samplers_init_systems.rs  tile_samplers_resources.rs  tile_shader_init_systems.rs  tile_systems.rs  tiling_init_systems.rs
crates/tilemap_shared/: Cargo.toml
crates/tilemap_shared/src/: lib.rs  tilemap_shared.rs
crates/ui_shared/: Cargo.toml
setup_screen/: Cargo.toml
src/: common.rs  game.rs  main.rs  pregame_menus.rs  ui.rs
src/common/: common_components.rs  common_systems.rs  common_utils.rs
src/examples/: 04_commands_spawn_hierarchy_expanded.rs  05_spawn_ui.rs  06_spawn_ui_impl_bundle.rs  07_spawn_ui_spawn_with.rs  08_spawn_ui_spawn_iter.rs
src/game/: being.rs  beings.rs  dimension.rs  enemy.rs  faction.rs  factions.rs  game_components.rs  game_resources.rs  game_systems.rs  game_utils.rs  modifier.rs  multiplayer.rs  player.rs  server.rs  setup_menus.rs  star.rs  things.rs  tilemap.rs  time.rs
src/pregame_menus/: create_character.rs  lobby.rs  main_menu.rs  pregame_components.rs  pregame_systems.rs
src/ui/: ui_components.rs  ui_resources.rs  ui_styles.rs  ui_systems.rs  ui_utils.rs
(+504 files in other folders)
