[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "argentum_coop"
version = "0.1.0"
edition = "2024"

[features]
default = []

[workspace.dependencies]
bevy = { version = "0.16.1", features = [
    "configurable_error_handler",
    "dynamic_linking",
    "track_location",
    "serialize",
    "jpeg",
] }

nano-id = "0.4.0"
strum = "0.27.2"
strum_macros = "0.27.2"
#vec-collections = "0.4.3"
debug_unwraps = "0.1.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rand_seeder = "*"
rand_pcg = "*"

bevy_ecs_tilemap = { path = "aother/tmap" }
superstate = { git = "https://github.com/KurlykovDanila/Superstate.git" }
bevy_simple_scroll_view = "0.4.0"
bevy_ui_text_input = "0.5.2"
bevy_replicon = "0.34.4"
bevy_replicon_renet = { git = "https://github.com/projectharmonia/bevy_replicon_renet.git" }
serde = { version = "1.0.219", features = ["derive"] }
bevy_common_assets = { version = "0.13.0", features = ["ron"]}

bevy_simple_subsecond_system = "0.2.0" #IMPORTANTE PARA HOTPATCHEAR SISTEMAS
bevy-ui-gradients = "0.4.0"
bevy_spritesheet_animation = "3.0.0"
bevy_asset_loader = "0.23.0"
bevy-inspector-egui = "0.33.1"
splines = { version = "5.0.0", features = ["serde"] }
indexmap = "2.11.0"
delegate = "0.13.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
noiz = "0.2.0"

#bevy_save = "1.0.0"
#bevy_rapier2d = "0.31.0"
#bevy_rand = "0.11.1"
#bevy_enhanced_input = "0.15.2"
#bevy_northstar = "0.3.1"

[dependencies]

multiplayer_shared = { path = "crates/multiplayer_shared" }
common = { path = "crates/acommon" }
asset_loading = { path = "crates/asset_loading" }
game_common = { path = "crates/agame_common" }
host = { path = "crates/host" }
client = { path = "crates/client" }
game = { path = "crates/game" }
movement = { path = "crates/movement" }
camera = { path = "crates/camera" }
dimension = { path = "crates/dimension" }
sprite_animation_shared = { path = "crates/sprite_animation_shared" }
sprite_animation = { path = "crates/sprite_animation" }
sprite = { path = "crates/sprite" } 
tilemap = { path = "crates/tilemap" }
modifier = { path = "crates/modifier" }
faction = { path = "crates/faction" }
player = { path = "crates/player" }
being = { path = "crates/being" }

ui_shared = { path = "crates/ui_shared" }
pregame_screen = { path = "crates/pregame_screen" }
setup_screen = { path = "crates/setup_screen" }
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] } # Improve Runtime Performance (Optional) 
#bevy_northstar = "0.3.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


