[package]
name = "bevy_ui_text_input"
keywords = ["bevy", "gamedev", "ui", "text", "input"]
description = "Bevy UI text input plugin"
categories = ["game-development", "gui", "text-editors"]
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy_ui_text_input"

[dependencies]
bevy = { version = "0.16", features = ["bevy_asset", "bevy_ui"] }
sys-locale = "0.3.0"
regex = "1.11.1"
once_cell = "1.21.3"
cosmic_undo_2 = "0.2.0"

[target.'cfg(any(windows, unix))'.dependencies]
arboard = { version = "3.5.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4"
