[package]
name = "game_common"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }

bevy = { workspace = true }
nano-id = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
splines = { workspace = true }
indexmap = { workspace = true }
delegate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bevy_asset_loader = { workspace = true }