[package]
name = "game_common"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
tilemap_shared = { path = "../tilemap_shared" }

bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_replicon = { workspace = true }
nano-id = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
splines = { workspace = true }
indexmap = { workspace = true }
delegate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_seeder = { workspace = true }
bevy-inspector-egui = { workspace = true }
rand_pcg = { workspace = true }