[package]
name = "asset_loading"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
tilemap = { path = "../tilemap" }
sprite_animation = { path = "../sprite_animation" }
sprite = { path = "../sprite" }
dimension = { path = "../dimension" }
dimension_shared = { path = "../dimension_shared" }


bevy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
bevy_spritesheet_animation = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_asset_loader = { workspace = true }
superstate = { workspace = true }