[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
game = { path = "../game" }
multiplayer_shared = { path = "../multiplayer_shared" }
sprite_shared = { path = "../sprite_shared" }
tilemap = { path = "../tilemap" }

bevy = { workspace = true }
nano-id = { workspace = true }
debug_unwraps = { workspace = true }
superstate = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
serde = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
bevy_asset_loader = { workspace = true }
indexmap = { workspace = true }
delegate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# 