[package]
name = "movement"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
being_shared = { path = "../being_shared" }
player = { path = "../player" }
modifier = { path = "../modifier" }
sprite_animation_shared = { path = "../sprite_animation_shared" }
# tilemap = { path = "../tilemap" }

bevy = { workspace = true }
serde = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }