[package]
name = "multiplayer_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
game = { path = "../game" }
tilemap = { path = "../tilemap" }
sprite_animation_shared = { path = "../sprite_animation_shared" }
sprite = { path = "../sprite" }

bevy = { workspace = true }
serde = { workspace = true }
nano-id = { workspace = true }
debug_unwraps = { workspace = true }
superstate = { workspace = true }
bevy_simple_scroll_view = { workspace = true }
bevy_ui_text_input = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }