[package]
name = "setup_screen"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
ui_shared = { path = "../ui_shared" }
multiplayer_shared = { path = "../multiplayer_shared" }
game_common = { path = "../agame_common" }
game = { path = "../game" }

bevy = { workspace = true }
bevy_simple_scroll_view = { workspace = true }
bevy_ui_text_input = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
serde = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
bevy-ui-gradients = { workspace = true }
delegate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }