[package]
name = "sprite"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
sprite_shared = { path = "../sprite_shared" }


bevy = { workspace = true }
debug_unwraps = { workspace = true }
serde = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
bevy_asset_loader = { workspace = true }
delegate = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
