[package]
name = "sprite_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }

bevy = { workspace = true }
serde = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_spritesheet_animation = { workspace = true }
