[package]
name = "tilemap"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../acommon" }
game_common = { path = "../agame_common" }
dimension = { path = "../dimension" }

bevy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bevy_simple_subsecond_system = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_asset_loader = { workspace = true }
superstate = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
debug_unwraps = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_seeder = { workspace = true }
rand_pcg = { workspace = true }
indexmap = { workspace = true }
delegate = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy-inspector-egui = { workspace = true }

noiz = { workspace = true }

fastnoise-lite = { workspace = true }

